Wrapped incon around p tag to fix error

--- a/assets/style.css
+++ b/assets/style.css
@@ -1020,7 +1020,6 @@ footer i {
 
     #toggle-nav p {
         display: inline;
-        margin-left: 20px;
         font-size: 18px;
         font-weight: 400;
         color: #FFF3B0;
